# snaplet-auth

./: .gitignore  LICENSE  README.md  snaplet-auth.cabal  stack.yaml
src/Snaplet/: Authentication.hs
src/Snaplet/Authentication/: Common.hs  Exception.hs  PasswordReset.hs  Queries.hs  Schema.hs  Session.hs  Types.hs  Utils.hs
test/Snaplet/: AuthenticationSpec.hs
test/Snaplet/Authentication/: SessionSpec.hs
