name:                snaplet-auth
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/krisajenkins/snaplet-auth#readme
license:             BSD3
license-file:        LICENSE
author:              Kris Jenkins
maintainer:          krisajenkins@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Snaplet.Authentication
  other-modules:       Snaplet.Authentication.Queries
                     , Snaplet.Authentication.Schema
                     , Snaplet.Authentication.Exception
  build-depends:       base >= 4.7 && < 5
                     , MonadCatchIO-transformers
                     , aeson
                     , bcrypt
                     , bytestring
                     , containers
                     , lucid
                     , either
                     , esqueleto
                     , jwt
                     , kashmir
                     , lens
                     , persistent
                     , persistent-template
                     , mime-mail
                     , snap
                     , snap-cors
                     , text
                     , time
                     , transformers
                     , mtl
                     , uuid
                     , yaml
  default-language:    Haskell2010

test-suite snaplet-auth-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Snaplet.AuthenticationSpec
  build-depends:       base
                     , snaplet-auth
                     , hspec
                     , hspec-core
                     , QuickCheck
                     , quickcheck-instances
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/krisajenkins/snaplet-auth
