name:                snaplet-auth
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/krisajenkins/snaplet-auth#readme
license:             BSD3
license-file:        LICENSE
author:              Kris Jenkins
maintainer:          krisajenkins@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Snaplet.Authentication
                     , Snaplet.Authentication.Session
  other-modules:       Snaplet.Authentication.Queries
                     , Snaplet.Authentication.Common
                     , Snaplet.Authentication.Exception
                     , Snaplet.Authentication.PasswordReset
                     , Snaplet.Authentication.Schema
  build-depends:       base >= 4.7 && < 5
                     , MonadCatchIO-transformers
                     , aeson
                     , aeson-casing
                     , bcrypt
                     , bytestring
                     , containers
                     , lucid
                     , either
                     , esqueleto
                     , jwt
                     , kashmir
                     , lens
                     , persistent
                     , persistent-template
                     , mime-mail
                     , snap
                     , text
                     , time
                     , transformers
                     , mtl
                     , uuid
                     , yaml
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

test-suite snaplet-auth-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Snaplet.Authentication.SessionSpec
  build-depends:       base
                     , snaplet-auth
                     , hspec
                     , hspec-core
                     , aeson
                     , aeson-casing
                     , jwt
                     , kashmir
                     , uuid
                     , containers
                     , QuickCheck
                     , quickcheck-instances
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/krisajenkins/snaplet-auth
